# rust-sample

./: Dockerfile  docker-compose.prod.yml  docker-compose.yml
app/: Cargo.toml  main.rs
app/migrations/2022-01-04-150630_create_posts/: up.sql
app/migrations/2022-01-22-205740_create_posts_table/: up.sql
app/src/: lib.rs  main.rs  models.rs  routes.rs  schema.rs  utils.rs
app/src/controllers/posts/: index.rs  mod.rs  store.rs  update.rs
app/src/domain/: mod.rs
app/src/domain/error/: error_response.rs  mod.rs
app/src/domain/post/: mod.rs  post.rs  post_factory.rs  post_identifier.rs  post_repoditory.rs  post_title.rs
app/src/domain/post/command/: create_post.rs  mod.rs  update_post.rs
app/src/domain/post/query/: get_post.rs
infrastructure/mysql/: my.cnf
