[package]
name = "sample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "*", features = ["mysql"] }
serde = { version = "1.0", features = ["derive"] }
ulid = { version = "0.4.*" }

[[bin]]
name = "sample"
path = "src/main.rs"
